Move some logic from interface to manager. Fix tests. Review feedback.

--- a/examples/analytics.amp.html
+++ b/examples/analytics.amp.html
@@ -205,6 +205,7 @@ Integer in felis at lacus mattis facilisis. Curabitur tincidunt, felis porttitor
     height="204"
     layout="responsive"
     controls
+    autoplay
   >
   <div placeholder>
     This is a placeholder
