--- a/examples/doubleclick-rtc.amp.html
+++ b/examples/doubleclick-rtc.amp.html
@@ -20,6 +20,7 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
 </head>
 <body>
+  <h2> NOTE: Must disable check that isSecureUrl for testing </h2>
   <h2>Doubleclick with RTC</h2>
     <amp-ad width="320" height="50"
       type="doubleclick"
