--- a/examples/doubleclick-rtc.amp.html
+++ b/examples/doubleclick-rtc.amp.html
@@ -13,8 +13,7 @@
   <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
   <script type="application/json" id="amp-rtc">
     {
-      "endpoint": "http://localhost:8080/",
-      "sendAdRequestOnFailure": false
+      "endpoint": "http://localhost:8080/"
     }
   </script>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
