--- a/examples/doubleclick-rtc.amp.html
+++ b/examples/doubleclick-rtc.amp.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Doubleclick RTC</title>
+  <link rel="canonical" href="http://nonblocking.io/" >
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <style amp-custom>
     amp-ad {
