Debug font load failures

--- a/examples/visual-tests/font.amp.404/font.amp.html
+++ b/examples/visual-tests/font.amp.404/font.amp.html
@@ -10,14 +10,14 @@
       font-family: 'Comic AMP';
       font-style: normal;
       font-weight: 400;
-      src: url(fonts/ComicAMP.ttf) format('truetype');
+      src: url(fonts/Comic_foo_AMP.ttf) format('truetype');
     }
 
     @font-face {
       font-family: 'Comic AMP Bold';
       font-style: bold;
       font-weight: 600;
-      src: url(fonts/ComicAMPBold.ttf) format('truetype');
+      src: url(fonts/Comic_foo_AMPBold.ttf) format('truetype');
     }
 
     .comic-amp-font-loaded {
