--- a/examples/visual-tests/font.amp.404/font.amp.html
+++ b/examples/visual-tests/font.amp.404/font.amp.html
@@ -10,14 +10,14 @@
       font-family: 'Comic AMP';
       font-style: normal;
       font-weight: 400;
-      src: url(fonts/Comic_foo_AMP.ttf) format('truetype');
+      src: url(fonts/ComicAMP.ttf) format('truetype');
     }
 
     @font-face {
       font-family: 'Comic AMP Bold';
       font-style: bold;
       font-weight: 600;
-      src: url(fonts/Comic_foo_AMPBold.ttf) format('truetype');
+      src: url(fonts/ComicAMPBold.ttf) format('truetype');
     }
 
     .comic-amp-font-loaded {
@@ -62,7 +62,7 @@
 
   <h2 class="comic-amp-bold">amp-font</h2>
 
-  <p>
+  <p id="debug_font" >
     "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
     "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."
   </p>
