Added top, center, bottom to animateScrollIntoView and scrollTo

--- a/examples/standard-actions.amp.html
+++ b/examples/standard-actions.amp.html
@@ -72,6 +72,8 @@
   <button on="tap:normal-element.hide">Hide</button>
   <button on="tap:normal-element.toggleVisibility">Toggle Visibility</button>
   <button on="tap:form.scrollTo">ScrollTo</button>
+  <button on="tap:form.scrollTo('position' = 'bottom')">ScrollTo Bottom</button>
+  <button on="tap:form.scrollTo('position' = 'center')">ScrollTo Center</button>
   <button on="tap:form.scrollTo('duration' = 5000)">ScrollTo Slowly</button>
   <button on="tap:name1.focus">Focus</button>
   <button on="tap:name1.blur">Lose Focus</button>
@@ -117,6 +119,9 @@
       Oops! We apologize, something went wrong. Please try again later.
     </div>
 </form>
+
+<div class="spacer">
+</div>
 
 
 </html>
