Implement renderStart API and fix review issues for dable ad

--- a/examples/ads.amp.html
+++ b/examples/ads.amp.html
@@ -586,8 +586,8 @@
   <h2>Dable</h2>
   <amp-embed width="450" height="140"
       type="dable"
-      data-widget_id="jobgqR7W"
-      data-item_id="testitem">
+      data-widget-id="jobgqR7W"
+      data-item-id="testitem">
   </amp-embed>
 
   <h2>DistroScale</h2>
