Started implementing custom controls

--- a/examples/amp-video.amp.html
+++ b/examples/amp-video.amp.html
@@ -84,6 +84,15 @@
     layout="responsive"
     controls>
   </amp-video>
+
+  <h2>Custom-controls</h2>
+  <amp-video
+    src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerJoyrides.mp4"
+    width="720"
+    height="405"
+    layout="responsive"
+    custom-controls>
+  </amp-video>
   <div class="spacer"></div>
 </body>
 </html>
