--- a/test/fixtures/3p-ad.html
+++ b/test/fixtures/3p-ad.html
@@ -20,6 +20,7 @@
 </head>
 <body>
   <div class='fill'></div>
+  <!-- amp-lightbox is used for ad container testing, no script needed -->
   <amp-lightbox>
     <amp-ad width=300 height=250
           type="_ping_"
