export fullscreen action + null checks

--- a/examples/3q-player.amp.html
+++ b/examples/3q-player.amp.html
@@ -29,6 +29,7 @@
   <button on="tap:video.pause">Pause</button>
   <button on="tap:video.mute">Mute</button>
   <button on="tap:video.unmute">Unmute</button>
+  <button on="tap:video.fullscreen">Fullscreen</button>
 
   <h2>Autoplay</h2>
   <amp-3q-player autoplay id="video" data-id="c8dbe7f4-7f7f-11e6-a407-0cc47a188158"
