--- a/examples/amp-youtube.amp.html
+++ b/examples/amp-youtube.amp.html
@@ -32,7 +32,7 @@
 <body>
   <h1>amp-youtube</h1>
 
-  <amp-youtube
+  <amp-youtube fullscreen-on-landscape
       id="myVideo"
       data-videoid="lBTCB7yLs8Y"
       width="358"
@@ -44,6 +44,7 @@
   <button on="tap:myVideo.pause">Pause</button>
   <button on="tap:myVideo.mute">Mute</button>
   <button on="tap:myVideo.unmute">Unmute</button>
+  <button on="tap:myVideo.fullscreen">Fullscreen</button>
 
   <h2>Autoplay</h2>
   <amp-youtube
