--- a/examples/amp-youtube.amp.html
+++ b/examples/amp-youtube.amp.html
@@ -32,7 +32,7 @@
 <body>
   <h1>amp-youtube</h1>
 
-  <amp-youtube fullscreen-on-landscape
+  <amp-youtube
       id="myVideo"
       data-videoid="lBTCB7yLs8Y"
       width="358"
