Attempt to improve the name

--- a/examples/forms.amp.html
+++ b/examples/forms.amp.html
@@ -495,7 +495,7 @@
 <form method="post"
       action-xhr="/form/echo-json/post"
       target="_blank"
-      custom-validation-reporting="as-you-go-show-all-on-submit">
+      custom-validation-reporting="interact-and-submit">
     <fieldset>
         <label>
             <span>Your name</span>
