--- a/examples/ads.amp.html
+++ b/examples/ads.amp.html
@@ -159,7 +159,7 @@
         <option>slimcutmedia</option>
         <option>smartadserver</option>
         <option>smartclip</option>
-        <option>sogou_ad</option>
+        <option>sogouad</option>
         <option>sortable</option>
         <option>sovrn</option>
         <option>spotx</option>
@@ -1133,9 +1133,9 @@
       data-sz="400x320">
   </amp-ad>
 
-  <h2>sogou_ad</h2>
+  <h2>sogou ad</h2>
   <amp-ad width="20" height="3"
-      type="sogou_ad"
+      type="sogouad"
       layout="responsive"
       data-slot="854370"
       data-w="20"
@@ -1143,7 +1143,7 @@
   </amp-ad>
 
   <amp-ad height="69"
-      type="sogou_ad"
+      type="sogouad"
       layout="fixed-height"
       data-slot="854366"
       data-w="100%"
