--- a/examples/article.amp.html
+++ b/examples/article.amp.html
@@ -4,14 +4,10 @@
   <meta charset="utf-8">
   <title>Lorem Ipsum | PublisherName</title>
   <link rel="canonical" href="https://medium.com/p/cb7f223fad86" >
-  <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <script async src="https://cdn.ampproject.org/v0.js"></script>
 
   <style amp-custom>
-    * {
-      outline: none;
-    }
-
     body {
       margin: 0;
       font-family: 'Georgia', Serif;
@@ -19,7 +15,7 @@
     }
 
     .brand-logo {
-      font-family: 'Open Sans';
+      font-family: 'Roboto', Arial, Helvetica, sans-serif;
     }
 
     .ad-container {
@@ -38,10 +34,6 @@
 
     .lightbox {
       background: #222;
-    }
-
-    .full-bleed {
-      margin: 0 -15px;
     }
 
     .lightbox-content {
@@ -72,7 +64,7 @@
     }
 
     figcaption {
-      font-family: 'Roboto';
+      font-family: 'Roboto', Arial, Helvetica, sans-serif;
       border-bottom: 1px solid #e2e2e2;
       color: #6d6d6d;
       margin-left: 20px;
@@ -113,7 +105,7 @@
 
     .header-time, .header-author {
       color: #a8a3ae;
-      font-family: 'Roboto';
+      font-family: 'Roboto', Arial, Helvetica, sans-serif;
       font-size: 12px;
     }
 
@@ -134,7 +126,7 @@
     }
 
     .byline {
-      font-family: 'Roboto';
+      font-family: 'Roboto', Arial, Helvetica, sans-serif;
       display: inline-block;
     }
 
@@ -275,9 +267,6 @@
       padding-right: 15px;
     }
 
-    .jump-to ul, .jump-to ol {
-    }
-
     .jump-to ul a, .jump-to ol a {
         text-decoration: none;
         color: #2294dd;
@@ -298,12 +287,18 @@
       padding-top: 0px;
     }
 
+    .slot-fallback {
+       padding: 16px;
+       background: #1b1b1b;
+       color: white;
+     }
   </style>
   <link href='https://fonts.googleapis.com/css?family=Georgia|Open+Sans|Roboto' rel='stylesheet' type='text/css'>
   <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
   <script async custom-element="amp-lightbox" src="https://cdn.ampproject.org/v0/amp-lightbox-0.1.js"></script>
   <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+  <script async custom-element="amp-video" src="https://cdn.ampproject.org/v0/amp-video-0.1.js"></script>
   <script async custom-element="amp-app-banner" src="https://cdn.ampproject.org/v0/amp-app-banner-0.1.js" data-amp-report-test="amp-app-banner.js"></script>
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   <meta name="apple-itunes-app" content="app-id=828256236, app-argument=medium://p/cb7f223fad86">
@@ -458,7 +453,6 @@
               width="720"
               height="405"
               layout="responsive"
-              dock
               controls>
             </amp-video>
             <figcaption class='video'>
@@ -500,7 +494,7 @@
           </p>
 
           <figure>
-            <amp-img class="full-bleed" placeholder
+            <amp-img placeholder
                 src="img/sea@1x.jpg"
                 srcset="img/sea@1x.jpg 1x, img/sea@2x.jpg 2x"
                 layout="responsive" width="320"
@@ -543,6 +537,17 @@
             torquent per conubia nostra, per inceptos himenaeos.
           </p>
         </div>
+        <!--
+          Slots spec is not implemented yet by any browser. Will use an older version via `<content>` tag.
+          <slot name="slot1"></slot>
+        -->
+        <slot name="slot1">
+          <content>
+            <div class="slot-fallback">
+              This is a slot fallback.
+            </div>
+          </content>
+        </slot>
       </div>
     </article>
   </main>
