--- a/test/manual/amp-slidescroll.amp.html
+++ b/test/manual/amp-slidescroll.amp.html
@@ -30,6 +30,14 @@
     margin: 0 !important;
   }
   /* END AMP.CSS */
+
+  .hidden {
+    display: none;
+  }
+
+  .visible {
+    display: block;
+  }
   </style>
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
@@ -136,6 +144,131 @@
       <amp-img src="https://lh3.googleusercontent.com/Z4gtm5Bkxyv21Z2PtbTf95Clb9AE4VTR6olbBKYrenM=w400-h300-no" width=400 height=300></amp-img>
     </amp-carousel>
   </amp-lightbox>
+
+
+  <h1>Alter window size to less than 500px and more than 500px to change image visibility with media attribute.</h1>
+  <amp-carousel
+      id="article-carousel"
+      layout="responsive"
+      width="1600"
+      height="900"
+      type="slides">
+      <div>
+          <amp-img src="https://dummyimage.com/1600x900/ff0000/3e3e42.png&text=image+large"
+                   layout="responsive"
+                   media="(min-width: 500px)"
+                   width="1600"
+                   height="900"
+                   alt="a sample image"></amp-img>
+          <amp-img src="https://dummyimage.com/1600x900/00ff00/3e3e42.png&text=image+small"
+                   layout="responsive"
+                   media="(max-width: 499px)"
+                   width="1600"
+                   height="900"
+                   alt="a sample image"></amp-img>
+      </div>
+      <div>
+          <amp-img src="https://dummyimage.com/1600x900/ff0000/3e3e42.png&text=image+large"
+                   layout="responsive"
+                   media="(min-width: 500px)"
+                   width="1600"
+                   height="900"
+                   alt="a sample image"></amp-img>
+          <amp-img src="https://dummyimage.com/1600x900/00ff00/3e3e42.png&text=image+small"
+                   layout="responsive"
+                   media="(max-width: 499px)"
+                   width="1600"
+                   height="900"
+                   alt="a sample image"></amp-img>
+      </div>
+      <div>
+          <amp-img src="https://dummyimage.com/1600x900/ff0000/3e3e42.png&text=image+large"
+                   layout="responsive"
+                   media="(min-width: 500px)"
+                   width="1600"
+                   height="900"
+                   alt="a sample image"></amp-img>
+          <amp-img src="https://dummyimage.com/1600x900/00ff00/3e3e42.png&text=image+small"
+                   layout="responsive"
+                   media="(max-width: 499px)"
+                   width="1600"
+                   height="900"
+                   alt="a sample image"></amp-img>
+      </div>
+  </amp-carousel>
+
+
+
+<div class="carousels" style="text-align:center;">
+
+
+
+    <span on="tap:carousel-1-container.hide,carousel-0-container.show">Carousel0</span>
+    <span on="tap:carousel-0-container.hide,carousel-1-container.show">Carousel1</span>
+
+
+
+    <div id="carousel-0-container">
+      <amp-carousel id="carousel-0" width="600" height="600" layout="responsive" type="slides" >
+
+        <amp-img src="http://via.placeholder.com/640x640/c60d0c/ffffff?text=C:0-IM:0" width="300" height="300" layout="responsive" role="button" tabindex=""></amp-img>
+        <amp-img src="http://via.placeholder.com/640x640/5359f7/ffffff?text=C:0-IM:1" width="300" height="300" layout="responsive" role="button" tabindex=""></amp-img>
+        <amp-img src="http://via.placeholder.com/640x640/2e9f28/ffffff?text=C:0-IM:2" width="300" height="300" layout="responsive" role="button" tabindex=""></amp-img>
+        <amp-img src="http://via.placeholder.com/640x640/feb53f/ffffff?text=C:0-IM:3" width="300" height="300" layout="responsive" role="button" tabindex=""></amp-img>
+
+      </amp-carousel>
+
+        <amp-img  src="http://via.placeholder.com/120x120/c60d0c/ffffff?text=C:0-IM:0" width="60" height="60"  role="" tabindex="" on="tap:carousel-0.goToSlide(index=0),carousel-1.goToSlide(index=0)"
+        ></amp-img>
+
+        <amp-img  src="http://via.placeholder.com/120x120/5359f7/ffffff?text=C:0-IM:1" width="60" height="60" role="" tabindex="" on="tap:carousel-0.goToSlide(index=1),carousel-1.goToSlide(index=1)"
+        ></amp-img>
+
+        <amp-img src="http://via.placeholder.com/120x120/2e9f28/ffffff?text=C:0-IM:2" width="60" height="60" role="" tabindex="" on="tap:carousel-0.goToSlide(index=2),carousel-1.goToSlide(index=2)"
+        ></amp-img>
+
+        <amp-img  src="http://via.placeholder.com/120x120/feb53f/ffffff?text=C:0-IM:3" width="60" height="60" role="" tabindex="" on="tap:carousel-0.goToSlide(index=3),carousel-1.goToSlide(index=3)"
+        ></amp-img>
+    </div>
+
+
+    <div id="carousel-1-container" hidden>
+      <amp-carousel id="carousel-1" width="600" height="600" layout="responsive" type="slides" >
+
+         <amp-img src="http://via.placeholder.com/640x640/c60d0c/ffffff?text=C:1-IM:0" width="300" height="300" layout="responsive"  role="button" tabindex=""
+
+         ></amp-img>
+          <amp-img src="http://via.placeholder.com/640x640/5359f7/ffffff?text=C:1-IM:1" width="300" height="300" layout="responsive" role="button" tabindex=""
+
+          ></amp-img>
+          <amp-img src="http://via.placeholder.com/640x640/2e9f28/ffffff?text=C:1-IM:2" width="300" height="300" layout="responsive" role="button" tabindex=""
+
+          ></amp-img>
+          <amp-img src="http://via.placeholder.com/640x640/feb53f/ffffff?text=C:1-IM:3" width="300" height="300" layout="responsive"  role="button" tabindex=""
+
+          ></amp-img>
+
+
+      </amp-carousel>
+        <amp-img  src="http://via.placeholder.com/120x120/c60d0c/ffffff?text=C:1-IM:0" width="60" height="60"   role="" tabindex=""
+        on="tap:carousel-1.goToSlide(index=0),carousel-0.goToSlide(index=0)"
+        ></amp-img>
+
+        <amp-img  src="http://via.placeholder.com/120x120/5359f7/ffffff?text=C:1-IM:1" width="60" height="60"  role="" tabindex=""
+        on="tap:carousel-1.goToSlide(index=1),carousel-0.goToSlide(index=1)"
+        ></amp-img>
+
+        <amp-img src="http://via.placeholder.com/120x120/2e9f28/ffffff?text=C:1-IM:2" width="60" height="60" role="" tabindex=""
+        on="tap:carousel-1.goToSlide(index=2),carousel-0.goToSlide(index=2)"
+        ></amp-img>
+
+        <amp-img  src="http://via.placeholder.com/120x120/feb53f/ffffff?text=C:1-IM:3" width="60" height="60"  role="" tabindex=""
+        on="tap:carousel-1.goToSlide(index=3),carousel-0.goToSlide(index=3)"
+        ></amp-img>
+    </div>
+
+
+
 </body>
 </html>
 
