Fixed CSS in test manual

--- a/test/manual/amp-sidebar-toolbar.amp.html
+++ b/test/manual/amp-sidebar-toolbar.amp.html
@@ -107,6 +107,10 @@ limitations under the License.
 }
 
 @media (max-width: 930px) {
+  .ampstart-toolbar-container .ampstart-headerbar-nav {
+      display: none;
+  }
+
   .ampstart-headerbar-nav > ul.flex {
     flex-direction: column;
     text-align: left;
