new placement ID used in examples

--- a/examples/ads.amp.html
+++ b/examples/ads.amp.html
@@ -291,7 +291,7 @@
           type="adocean"
           data-ao-mode="sync"
           data-ao-emitter="myao.adocean.pl"
-          data-ao-id="ado-bIVMPpCJPX0.5tjQbNyrWpnws_dbbTJ1fUnGjLeSqJ3.K7"
+          data-ao-id="ado-vf2X22YCNzPRUVYmLg.jQb53Xb1BcMbzJlwIv7SLH_f.97"
           data-ao-preview="y6g3tTbLJv6vLRZ.AfyeiXkCPM0gL3CNAik2rwTzhKD.N7"
           data-ao-keys="key1,key2,key3"
           data-ao-vars='{"a":"b","c":"d"}'
@@ -303,7 +303,7 @@
           type="adocean"
           data-ao-mode="buffered"
           data-ao-emitter="myao.adocean.pl"
-          data-ao-id="ado-bIVMPpCJPX0.5tjQbNyrWpnws_dbbTJ1fUnGjLeSqJ3.K7"
+          data-ao-id="ado-vf2X22YCNzPRUVYmLg.jQb53Xb1BcMbzJlwIv7SLH_f.97"
           data-ao-preview="y6g3tTbLJv6vLRZ.AfyeiXkCPM0gL3CNAik2rwTzhKD.N7"
           data-ao-keys="key1,key2,key3"
           data-ao-vars='{"a":"b","c":"d"}'
