--- a/examples/amp-visibility-observer.amp.html
+++ b/examples/amp-visibility-observer.amp.html
@@ -22,7 +22,7 @@
       background: #FAFAFA;
       transform-origin: 50% 0%;
       border-radius: 10px;
-      transform: rotate(-180deg)
+      transform: rotate(180deg)
     }
   </style>
   <!--<style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>-->
@@ -51,7 +51,7 @@
   <amp-animation id="clockAnim1" layout="nodisplay">
     <script type="application/json">
     {
-      "duration": "30s",
+      "duration": "6s",
       "fill": "both",
       "direction": "alternate",
       "animations": [
@@ -59,7 +59,7 @@
           "selector": "#clock-scene-1 .clock-hand",
           "keyframes": [
             { "transform": "rotate(-180deg)" },
-            { "transform": "rotate(0deg)" }
+            { "transform": "rotate(180deg)" }
           ]
         }
       ]
@@ -69,7 +69,7 @@
   <div id="clock-scene-1" class="clock-scene">
     <amp-visibility-observer
     intersection-ratio="0 1"
-    on="progress:clockAnim1.seekTo(percent=event.percent)"
+    on="scroll:clockAnim1.seekTo(percent=event.percent)"
     layout="nodisplay"></amp-visibility-observer>
 
     <amp-img layout="responsive" width=2 height=1.5 src="./img/clock.jpg">
@@ -101,15 +101,15 @@
   <amp-animation id="clockAnim2" layout="nodisplay">
     <script type="application/json">
     {
-      "duration": "30s",
+      "duration": "6s",
       "fill": "both",
-      "direction": "alternate",
+      "iterations": "infinity",
       "animations": [
         {
           "selector": "#clock-scene-2 .clock-hand",
           "keyframes": [
             { "transform": "rotate(-180deg)" },
-            { "transform": "rotate(0deg)" }
+            { "transform": "rotate(180deg)" }
           ]
         }
       ]
@@ -117,7 +117,7 @@
     </script>
   </amp-animation>
   <div id="clock-scene-2" class="clock-scene">
-    <amp-visibility-observers
+    <amp-visibility-observer
     intersection-ratio="0.5"
     on="enter:clockAnim2.start;exit:clockAnim2.pause"
     layout="nodisplay"></amp-visibility-observer>
