Started some of Dima's changes

--- a/examples/pwa/pwa.html
+++ b/examples/pwa/pwa.html
@@ -14,7 +14,7 @@
 
     function loadScript(url, callback) {
         // Adding the script tag to the head as suggested before
-        var head = document.getElementsByTagName('head')[0];
+        var head = document.head[0];
         var script = document.createElement('script');
         script.type = 'text/javascript';
         script.src = url;
