Relayout current slide on layoutCallback

--- a/test/manual/amp-slidescroll.amp.html
+++ b/test/manual/amp-slidescroll.amp.html
@@ -154,13 +154,13 @@
       height="900"
       type="slides">
       <div>
-          <amp-img src="https://dummyimage.com/1600x900/ff0000/3e3e42.png&text=image+large"
+          <amp-img src="https://lh3.googleusercontent.com/5rcQ32ml8E5ONp9f9-Rf78IofLb9QjS5_0mqsY1zEFc=w100-h75-no"
                    layout="responsive"
                    media="(min-width: 500px)"
                    width="1600"
                    height="900"
                    alt="a sample image"></amp-img>
-          <amp-img src="https://dummyimage.com/1600x900/00ff00/3e3e42.png&text=image+small"
+          <amp-img src="https://lh3.googleusercontent.com/pSECrJ82R7-AqeBCOEPGPM9iG9OEIQ_QXcbubWIOdkY=w100-h75-no"
                    layout="responsive"
                    media="(max-width: 499px)"
                    width="1600"
@@ -168,13 +168,13 @@
                    alt="a sample image"></amp-img>
       </div>
       <div>
-          <amp-img src="https://dummyimage.com/1600x900/ff0000/3e3e42.png&text=image+large"
+          <amp-img src="https://lh3.googleusercontent.com/5rcQ32ml8E5ONp9f9-Rf78IofLb9QjS5_0mqsY1zEFc=w100-h75-no"
                    layout="responsive"
                    media="(min-width: 500px)"
                    width="1600"
                    height="900"
                    alt="a sample image"></amp-img>
-          <amp-img src="https://dummyimage.com/1600x900/00ff00/3e3e42.png&text=image+small"
+          <amp-img src="https://lh3.googleusercontent.com/pSECrJ82R7-AqeBCOEPGPM9iG9OEIQ_QXcbubWIOdkY=w100-h75-no"
                    layout="responsive"
                    media="(max-width: 499px)"
                    width="1600"
@@ -182,13 +182,13 @@
                    alt="a sample image"></amp-img>
       </div>
       <div>
-          <amp-img src="https://dummyimage.com/1600x900/ff0000/3e3e42.png&text=image+large"
+          <amp-img src="https://lh3.googleusercontent.com/5rcQ32ml8E5ONp9f9-Rf78IofLb9QjS5_0mqsY1zEFc=w100-h75-no"
                    layout="responsive"
                    media="(min-width: 500px)"
                    width="1600"
                    height="900"
                    alt="a sample image"></amp-img>
-          <amp-img src="https://dummyimage.com/1600x900/00ff00/3e3e42.png&text=image+small"
+          <amp-img src="https://lh3.googleusercontent.com/pSECrJ82R7-AqeBCOEPGPM9iG9OEIQ_QXcbubWIOdkY=w100-h75-no"
                    layout="responsive"
                    media="(max-width: 499px)"
                    width="1600"
@@ -196,78 +196,6 @@
                    alt="a sample image"></amp-img>
       </div>
   </amp-carousel>
-
-
-
-<div class="carousels" style="text-align:center;">
-
-
-
-    <span on="tap:carousel-1-container.hide,carousel-0-container.show">Carousel0</span>
-    <span on="tap:carousel-0-container.hide,carousel-1-container.show">Carousel1</span>
-
-
-
-    <div id="carousel-0-container">
-      <amp-carousel id="carousel-0" width="600" height="600" layout="responsive" type="slides" >
-
-        <amp-img src="http://via.placeholder.com/640x640/c60d0c/ffffff?text=C:0-IM:0" width="300" height="300" layout="responsive" role="button" tabindex=""></amp-img>
-        <amp-img src="http://via.placeholder.com/640x640/5359f7/ffffff?text=C:0-IM:1" width="300" height="300" layout="responsive" role="button" tabindex=""></amp-img>
-        <amp-img src="http://via.placeholder.com/640x640/2e9f28/ffffff?text=C:0-IM:2" width="300" height="300" layout="responsive" role="button" tabindex=""></amp-img>
-        <amp-img src="http://via.placeholder.com/640x640/feb53f/ffffff?text=C:0-IM:3" width="300" height="300" layout="responsive" role="button" tabindex=""></amp-img>
-
-      </amp-carousel>
-
-        <amp-img  src="http://via.placeholder.com/120x120/c60d0c/ffffff?text=C:0-IM:0" width="60" height="60"  role="" tabindex="" on="tap:carousel-0.goToSlide(index=0),carousel-1.goToSlide(index=0)"
-        ></amp-img>
-
-        <amp-img  src="http://via.placeholder.com/120x120/5359f7/ffffff?text=C:0-IM:1" width="60" height="60" role="" tabindex="" on="tap:carousel-0.goToSlide(index=1),carousel-1.goToSlide(index=1)"
-        ></amp-img>
-
-        <amp-img src="http://via.placeholder.com/120x120/2e9f28/ffffff?text=C:0-IM:2" width="60" height="60" role="" tabindex="" on="tap:carousel-0.goToSlide(index=2),carousel-1.goToSlide(index=2)"
-        ></amp-img>
-
-        <amp-img  src="http://via.placeholder.com/120x120/feb53f/ffffff?text=C:0-IM:3" width="60" height="60" role="" tabindex="" on="tap:carousel-0.goToSlide(index=3),carousel-1.goToSlide(index=3)"
-        ></amp-img>
-    </div>
-
-
-    <div id="carousel-1-container" hidden>
-      <amp-carousel id="carousel-1" width="600" height="600" layout="responsive" type="slides" >
-
-         <amp-img src="http://via.placeholder.com/640x640/c60d0c/ffffff?text=C:1-IM:0" width="300" height="300" layout="responsive"  role="button" tabindex=""
-
-         ></amp-img>
-          <amp-img src="http://via.placeholder.com/640x640/5359f7/ffffff?text=C:1-IM:1" width="300" height="300" layout="responsive" role="button" tabindex=""
-
-          ></amp-img>
-          <amp-img src="http://via.placeholder.com/640x640/2e9f28/ffffff?text=C:1-IM:2" width="300" height="300" layout="responsive" role="button" tabindex=""
-
-          ></amp-img>
-          <amp-img src="http://via.placeholder.com/640x640/feb53f/ffffff?text=C:1-IM:3" width="300" height="300" layout="responsive"  role="button" tabindex=""
-
-          ></amp-img>
-
-
-      </amp-carousel>
-        <amp-img  src="http://via.placeholder.com/120x120/c60d0c/ffffff?text=C:1-IM:0" width="60" height="60"   role="" tabindex=""
-        on="tap:carousel-1.goToSlide(index=0),carousel-0.goToSlide(index=0)"
-        ></amp-img>
-
-        <amp-img  src="http://via.placeholder.com/120x120/5359f7/ffffff?text=C:1-IM:1" width="60" height="60"  role="" tabindex=""
-        on="tap:carousel-1.goToSlide(index=1),carousel-0.goToSlide(index=1)"
-        ></amp-img>
-
-        <amp-img src="http://via.placeholder.com/120x120/2e9f28/ffffff?text=C:1-IM:2" width="60" height="60" role="" tabindex=""
-        on="tap:carousel-1.goToSlide(index=2),carousel-0.goToSlide(index=2)"
-        ></amp-img>
-
-        <amp-img  src="http://via.placeholder.com/120x120/feb53f/ffffff?text=C:1-IM:3" width="60" height="60"  role="" tabindex=""
-        on="tap:carousel-1.goToSlide(index=3),carousel-0.goToSlide(index=3)"
-        ></amp-img>
-    </div>
-
-
 
 </body>
 </html>
