Implemented custom controls and minimized video controls

--- a/examples/article.amp.html
+++ b/examples/article.amp.html
@@ -9,9 +9,10 @@
 
   <style amp-custom>
     body {
-      margin: 0;
       font-family: 'Georgia', Serif;
       background: white;
+      max-width: 720px;
+      margin: auto !important;
     }
 
     .brand-logo {
@@ -452,8 +453,7 @@
               artist="Blender Foundation"
               width="720"
               height="405"
-              layout="responsive"
-              controls>
+              layout="responsive">
             </amp-video>
             <figcaption class='video'>
               Fusce pretium tempor justo, vitae consequat dolor maximus eget.
