--- a/extensions/amp-visibility-observer/0.1/test/validator-amp-selector.html
+++ b/extensions/amp-visibility-observer/0.1/test/validator-amp-selector.html
@@ -15,7 +15,7 @@
 -->
 <!--
   Test Description:
-  Tests amp-live-list.
+  Tests amp-visibility-observer.
 -->
 <!doctype html>
 <html ⚡>
@@ -25,78 +25,42 @@
   <meta name="viewport" content="width=device-width,minimum-scale=1">
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
-  <script async custom-element="amp-selector" src="https://cdn.ampproject.org/v0/amp-selector-0.1.js"></script>
-  <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
-  <script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
-  <script async custom-element="amp-live-list" src="https://cdn.ampproject.org/v0/amp-live-list-0.1.js"></script>
+  <script async custom-element="amp-selector" src="https://cdn.ampproject.org/v0/amp-visibility-observer-0.1.js"></script>
 </head>
 <body>
   <!-- Valid -->
-  <form action="/" method="get" target="_blank" id="form1">
-  <!-- <amp-selector> with the options as list elements -->
-  <amp-selector layout="container" name="single_image_select">
-    <ul>
-      <li><amp-img src="/img1.png" width=50 height=50 option="1"></amp-img></li>
-      <li><amp-img src="/img2.png" width=50 height=50 option="2"></amp-img></li>
-      <li option="na" selected>None of the Above</li>
-    </ul>
-  </amp-selector>
-  <!-- <amp-selector> with the options as images -->
-  <amp-selector layout="container" name="multi_image_select" multiple>
-    <amp-img src="/img1.png" width=50 height=50 option="1"></amp-img>
-    <amp-img src="/img2.png" width=50 height=50 option="2"></amp-img>
-    <amp-img src="/img3.png" width=50 height=50 option="3"></amp-img>
-  </amp-selector>
-  <!-- <amp-selector> with the options as carousel images -->
-  <amp-selector layout="container" name="multi_image_select_1" multiple>
-    <amp-carousel id="carousel-1" width=200 height=60 controls>
-      <amp-img src="/img1.png" width=80 height=60 option="a"></amp-img>
-      <amp-img src="/img2.png" width=80 height=60 option="b" selected></amp-img>
-      <amp-img src="/img3.png" width=80 height=60 option="c"></amp-img>
-      <amp-img src="/img4.png" width=80 height=60 option="d" disabled></amp-img>
-    </amp-carousel>
-  </amp-selector>
-  <!-- <amp-selector> with bindable [selected] attribute -->
-  <amp-selector layout="container" name="with_binding" [selected]="foo.bar">
-  </amp-selector>
-</form>
+  <amp-visibility-observer layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer layout="nodisplay" on="enter:foo;exit:bar;scroll:baz(percent=event.percent)"></amp-visibility-observer>
+  <amp-visibility-observer target-selector="#id" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer target-selector=".class #id" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer intersection-ratios="0" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer intersection-ratios="0.5" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer intersection-ratios="0.5 0" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer intersection-ratios="1 0.5" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer exclusion-margins="100" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer exclusion-margins="100 200" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer exclusion-margins="100vh" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer exclusion-margins="100px" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer exclusion-margins="100px 200" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer exclusion-margins="100px 200vh" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer exclusion-margins="100vh 200px" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer exclusion-margins="100 200vh" layout="nodisplay"></amp-visibility-observer>
 
-<!-- <amp-selector> with the options as carousel images, outside a form -->
-<amp-selector layout="container" name="multi_image_select_2" multiple form="form1">
-  <amp-carousel id="carousel-1" width=400 height=300 type=slides controls>
-    <amp-img src="/img1.png" width=80 height=60 option="a"></amp-img>
-    <amp-img src="/img2.png" width=80 height=60 option="b" selected></amp-img>
-    <amp-img src="/img3.png" width=80 height=60 option="c"></amp-img>
-    <amp-img src="/img4.png" width=80 height=60 option="d"></amp-img>
-  </amp-carousel>
-</amp-selector>
-
-<!-- Let's also try embedding an <amp-selector> inside an <amp-live-list>
-     and vice versa. These should both be valid even though they are
-     nonsensical. -->
-<amp-live-list id="my-live-list" data-max-items-per-page="20">
-  <button update on="tap:my-live-list.update">
-    <amp-selector layout="container" name="multi_image_select" multiple>
-      <amp-img src="/img1.png" width=50 height=50 option="1"></amp-img>
-      <amp-img src="/img2.png" width=50 height=50 option="2"></amp-img>
-      <amp-img src="/img3.png" width=50 height=50 option="3"></amp-img>
-    </amp-selector>
-  </button>
-  <div items></div>
-  <!-- pagination is optional -->
-  <div pagination></div>
-</amp-live-list>
-
-<amp-selector layout="container" name="multi_image_select" multiple>
-  <div option="1">
-    <amp-live-list id="my-live-list" data-max-items-per-page="20">
-      <button update on="tap:my-live-list.update">You have updates!</button>
-      <div items></div>
-      <!-- pagination is optional -->
-      <div pagination></div>
-    </amp-live-list>
-  </div>
-  <div option="2">Non-live-list option</div>
-</amp-selector>
-
+  <!-- Invalid -->
+  <amp-visibility-observer></amp-visibility-observer>
+  <amp-visibility-observer intersection-ratios="" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer intersection-ratios="foo" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer intersection-ratios="3" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer intersection-ratios="0.5 foo" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer intersection-ratios="0.5 4" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer intersection-ratios="foo 0.5" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer intersection-ratios="4 0.5" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer exclusion-margins="" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer exclusion-margins="foo" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer exclusion-margins="100fx" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer exclusion-margins="100vx" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer exclusion-margins="100 100vx" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer exclusion-margins="100vh 100vx" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer exclusion-margins="100fx 100vh" layout="nodisplay"></amp-visibility-observer>
+  <amp-visibility-observer exclusion-margins="100vx 100px" layout="nodisplay"></amp-visibility-observer>
 </body>
