--- a/test/manual/amp-animation/embeds/scrollbound/clock.a4a.html
+++ b/test/manual/amp-animation/embeds/scrollbound/clock.a4a.html
@@ -86,7 +86,7 @@
 
   <div class="container">
     <amp-visibility-observer
-      intersection-ratio="1"
+      intersection-ratios="1"
       exclusion-margins="5vh"
       on="scroll:clockAnim.seekTo(percent=event.percent)"
       layout="nodisplay"></amp-visibility-observer>
