validation tests and experiment flag

--- a/examples/amp-position-observer.amp.html
+++ b/examples/amp-position-observer.amp.html
@@ -99,8 +99,8 @@
   </amp-animation>
   <main>
     <h1>amp-position-observer (Experimental)</h1>
-    <div>Please ensure <pre>amp-position-observer</pre> is enabled by calling
-      <pre>AMP.toggleExperiment('amp-position-observer', true);</pre> in Developer Console first.
+    <h1><div>Please ensure <pre>amp-position-observer</pre> experiment flag is enabled first</h1> Running
+      <pre>AMP.toggleExperiment('amp-position-observer', true);</pre> in Developer Console will enable the experiment for your browser.
     </div>
     <div class="spacer"></div>
 
