--- a/extensions/amp-position-observer/0.1/test/validator-amp-position-observer.html
+++ b/extensions/amp-position-observer/0.1/test/validator-amp-position-observer.html
@@ -34,6 +34,7 @@
   <amp-position-observer target-selector="#id" layout="nodisplay"></amp-position-observer>
   <amp-position-observer target-selector=".class #id" layout="nodisplay"></amp-position-observer>
   <amp-position-observer intersection-ratios="0" layout="nodisplay"></amp-position-observer>
+  <amp-position-observer intersection-ratios="1" layout="nodisplay"></amp-position-observer>
   <amp-position-observer intersection-ratios="0.5" layout="nodisplay"></amp-position-observer>
   <amp-position-observer intersection-ratios="0.5 0" layout="nodisplay"></amp-position-observer>
   <amp-position-observer intersection-ratios="1 0.5" layout="nodisplay"></amp-position-observer>
@@ -49,11 +50,14 @@
   <!-- Invalid -->
   <amp-position-observer></amp-position-observer>
   <amp-position-observer intersection-ratios="" layout="nodisplay"></amp-position-observer>
+  <amp-position-observer intersection-ratios="1.1" layout="nodisplay"></amp-position-observer>
   <amp-position-observer intersection-ratios="foo" layout="nodisplay"></amp-position-observer>
   <amp-position-observer intersection-ratios="3" layout="nodisplay"></amp-position-observer>
   <amp-position-observer intersection-ratios="0.5 foo" layout="nodisplay"></amp-position-observer>
+  <amp-position-observer intersection-ratios="0.5 1.1" layout="nodisplay"></amp-position-observer>
   <amp-position-observer intersection-ratios="0.5 4" layout="nodisplay"></amp-position-observer>
   <amp-position-observer intersection-ratios="foo 0.5" layout="nodisplay"></amp-position-observer>
+  <amp-position-observer intersection-ratios="1.1 0.5" layout="nodisplay"></amp-position-observer>
   <amp-position-observer intersection-ratios="4 0.5" layout="nodisplay"></amp-position-observer>
   <amp-position-observer exclusion-margins="" layout="nodisplay"></amp-position-observer>
   <amp-position-observer exclusion-margins="foo" layout="nodisplay"></amp-position-observer>
